feat(Java version): 1. Replace Java 17 with Java 21